--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -32,7 +32,7 @@
         Aliquam erat volutpat. Aenean accumsan.
         </span>
     
-        <button data-modal-open type="button" class="about-section__button about-section__button-text"> Read more 
+        <button data-modal-open="modal-about" type="button" class="about-section__button about-section__button-text"> Read more 
             <svg class="about-section__button-icon" width="10" height="10">
                 <use href="./images/icon/svg-all.svg#icon-btn-arrow"></use>
             </svg>
@@ -43,9 +43,9 @@
 </section>
 
 <!-- Модальне вікно about -->
-<div data-modal class="backdrop is-hidden">
+<div id="modal-about" class="backdrop is-hidden">
     <div class="about-modal">
-        <button data-modal-close type="button" class="about-modal__close-button">
+        <button data-modal-close="modal-about" type="button" class="about-modal__close-button">
             <svg class="about-modal__close-button-svg" width="30px" height="30px">
                 <use href="./images/icon/svg-all.svg#about-modal-close"></use>
             </svg>
