--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -111,15 +111,15 @@
                 <button class="our-button">Our Locations</button>
               </div>
               <div class="btn">
-                <button class="franchise-button" data-modal-open>Franchise</button>
+                <button class="franchise-button" data-modal-open="modal-franchise">Franchise</button>
               </div>
             </div>
           </div>
         </section>
 
-        <div class="backdrop is-hidden" data-modal>
+        <div id="modal-franchise" class="backdrop is-hidden">
           <div class="modal">
-            <button type="button" class="modal-close" data-modal-close>
+            <button type="button" class="modal-close" data-modal-close="modal-franchise">
               <svg class="backdrop-close-icon" width="18" height="18">
                 <use href="./partials/images svg/close.svg#icon-close"></use>
               </svg>
@@ -170,4 +170,3 @@
             </form>
           </div>
         </div>
-        <script src="./sass/js.modal/modal.js"></script>
